--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,13 +10,23 @@
     <%= javascript_include_tag "application" %>
   </head>
   <body>
-
     <div class="navbar navbar-default navbar-static-top">
       <div class="container">
         <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-responsive-collapse">
         </button>
-        <a class="navbar-brand" href="#">Interview</a>
+        <a class="navbar-brand" href="/">Interview</a>
+        <%if current_user%>
         <div class="navbar-collapse collapse navbar-responsive-collapse">
+          <ul class="nav navbar-nav">
+            <li>
+              <%if current_user.admin %>
+                <%=link_to "Users", root_path, :class => 'navbar-link' %>
+              <%end%>
+            </li>
+            <li>
+              <%=link_to "Papers", papers_path, :class => 'navbar-link' %>
+            </li>
+          </ul>
           <ul class="nav navbar-nav pull-right">
             <% if user_signed_in? %>
               <li>
@@ -35,6 +45,7 @@
             <% end %>
           </ul>
         </div>
+        <%end%>
       </div>
     </div>
 
