--- a/app/views/papers/_form.html.erb
+++ b/app/views/papers/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for @paper, :html => { :class => "form-horizontal paper" } do |f| %>
+<%= nested_form_for @paper, :html => { :class => "form-horizontal paper" } do |f| %>
 
   <% if @paper.errors.any? %>
     <div id="error_expl" class="panel panel-danger">
@@ -21,6 +21,35 @@
       <%= f.text_field :name, :class => 'form-control' %>
     </div>
     <%=f.error_span(:name) %>
+  </div>
+  <div class="form-group">
+    <%= f.fields_for :questions, :html => { :class => "form-horizontal question" } do |question_form| %>
+      <div class="form-group">
+        <%= question_form.label :question, :class => 'control-label col-lg-2' %>
+        <div class="col-lg-11">
+          <%= question_form.text_field :question, :class => 'form-control' %>
+        </div>
+        <%= question_form.link_to_remove image_tag "x.png", size:"10x10"%>
+      </div>
+      <%= question_form.fields_for :options, :html => { :class => "form-horizontal option" } do |option_form| %>
+        <div class="form-group">
+        <%= option_form.label :option, :class => 'control-label col-lg-2' %>
+        <div class="col-lg-9">
+          <%= option_form.text_field :answer, :class => 'form-control' %>
+        </div>
+        <%= option_form.link_to_remove image_tag "x.png", size:"10x10"%>
+      </div>
+      <% end %>
+      <div class="col-lg-offset-2 col-lg-10">
+        <%= question_form.link_to_add "Add an Option", :options, :class => 'btn btn-primary'%>
+      </div>
+    <% end %>
+
+    <div class="form-group">
+      <div class="col-lg-offset-2 col-lg-10">
+        <%= f.link_to_add "Add a question", :questions, :class => 'btn btn-primary' %>
+      </div>
+    </div>
   </div>
 
   <div class="form-group">
