--- a/app/views/papers/index.html.erb
+++ b/app/views/papers/index.html.erb
@@ -5,34 +5,31 @@
 <table class="table table-striped">
   <thead>
     <tr>
-      <th><%= model_class.human_attribute_name(:id) %></th>
       <th><%= model_class.human_attribute_name(:name) %></th>
       <th><%= model_class.human_attribute_name(:number_of_questions) %></th>
       <th><%= model_class.human_attribute_name(:total_time) %></th>
-      <th><%=t '.actions', :default => t("helpers.actions") %></th>
+      <%if current_user.admin%>
+        <th><%=t '.actions', :default => t("helpers.actions") %></th>
+      <%end%>
     </tr>
   </thead>
   <tbody>
     <% @papers.each do |paper| %>
       <tr>
-        <td><%= link_to paper.id, paper_path(paper) %></td>
-        <td><%= paper.name %></td>
+        <td><%= link_to paper.name, paper_path(paper) %></td>
         <td><%= paper.questions.count() %></td>
-        <td><%= paper.questions.sum(:time) %></td>
+        <td><%= paper.questions.sum(:duration) %></td>
         <td>
-          <%= link_to t('.edit', :default => t("helpers.links.edit")),
-                      edit_paper_path(paper), :class => 'btn btn-default btn-xs' %>
-          <%= link_to t('.destroy', :default => t("helpers.links.destroy")),
-                      paper_path(paper),
-                      :method => :delete,
-                      :data => { :confirm => t('.confirm', :default => t("helpers.links.confirm", :default => 'Are you sure?')) },
-                      :class => 'btn btn-xs btn-danger' %>
+          <%if current_user.admin%>
+            <%= link_to t('.edit', :default => t("helpers.links.edit")),
+                        edit_paper_path(paper), :class => 'btn btn-default btn-xs' %>
+            <%= link_to t('.destroy', :default => t("helpers.links.destroy")),paper_path(paper),:method => :delete,:data => { :confirm => t('.confirm', :default => t("helpers.links.confirm", :default => 'Are you sure?')) },:class => 'btn btn-xs btn-danger' %>
+          <%end%>
         </td>
       </tr>
     <% end %>
   </tbody>
 </table>
-
-<%= link_to t('.new', :default => t("helpers.links.new")),
-            new_paper_path,
-            :class => 'btn btn-primary' %>
+<%if current_user.admin%>
+  <%= link_to t('.new', :default => t("helpers.links.new")),new_paper_path,:class => 'btn btn-primary' %>
+<%end%>
