--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -8,12 +8,14 @@
   <dd><%= @user.fname+" "+@user.lname %></dd>
   <dt><strong><%= model_class.human_attribute_name(:email) %>:</strong></dt>
   <dd><%= @user.email %></dd>
-  <dt><strong><%= model_class.human_attribute_name(:current_sign_in_at) %>:</strong></dt>
-  <dd><%= @user.current_sign_in_at %></dd>
-  <dt><strong><%= model_class.human_attribute_name(:last_sign_in_at) %>:</strong></dt>
-  <dd><%= @user.last_sign_in_at %></dd>
-  <dt><strong><%= model_class.human_attribute_name(:current_sign_in_ip) %>:</strong></dt>
-  <dd><%= @user.current_sign_in_ip %></dd>
-  <dt><strong><%= model_class.human_attribute_name(:last_sign_in_ip) %>:</strong></dt>
-  <dd><%= @user.last_sign_in_ip %></dd>
+  <%if current_user.admin%>
+    <dt><strong><%= model_class.human_attribute_name(:current_sign_in_at) %>:</strong></dt>
+    <dd><%= @user.current_sign_in_at %></dd>
+    <dt><strong><%= model_class.human_attribute_name(:last_sign_in_at) %>:</strong></dt>
+    <dd><%= @user.last_sign_in_at %></dd>
+    <dt><strong><%= model_class.human_attribute_name(:current_sign_in_ip) %>:</strong></dt>
+    <dd><%= @user.current_sign_in_ip %></dd>
+    <dt><strong><%= model_class.human_attribute_name(:last_sign_in_ip) %>:</strong></dt>
+    <dd><%= @user.last_sign_in_ip %></dd>
+  <%end%>
 </dl>
