--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,23 +10,24 @@
     <%= javascript_include_tag "application" %>
   </head>
   <body>
-    <div class="navbar navbar-default navbar-static-top">
+    <div class="navbar navbar-default navbar-static-top navbar-inverse" >
       <div class="container">
         <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-responsive-collapse">
         </button>
         <a class="navbar-brand" href="/">Interview</a>
-        <%if current_user%>
         <div class="navbar-collapse collapse navbar-responsive-collapse">
-          <ul class="nav navbar-nav">
-            <li>
-              <%if current_user.admin %>
-                <%=link_to "Users", root_path, :class => 'navbar-link' %>
-              <%end%>
-            </li>
-            <li>
-              <%=link_to "Papers", papers_path, :class => 'navbar-link' %>
-            </li>
-          </ul>
+          <%if current_user%>
+            <ul class="nav navbar-nav">
+              <li>
+                <%if current_user.admin %>
+                  <%=link_to "Users", root_path, :class => 'navbar-link' %>
+                <%end%>
+              </li>
+              <li>
+                <%=link_to "Papers", papers_path, :class => 'navbar-link' %>
+              </li>
+            </ul>
+          <%end%>
           <ul class="nav navbar-nav pull-right">
             <% if user_signed_in? %>
               <li>
@@ -45,10 +46,10 @@
             <% end %>
           </ul>
         </div>
-        <%end%>
       </div>
     </div>
-
+    <!-- <div class="navbar">
+    </div> -->
     <div class="container">
       <div class="row">
         <div class="col-lg-12">
@@ -60,8 +61,6 @@
       <footer>
         <p align="center">&copy; Interview Company 2019</p>
       </footer>
-
     </div> <!-- /container -->
-
   </body>
 </html>
