--- a/app/views/papers/_form.html.erb
+++ b/app/views/papers/_form.html.erb
@@ -1,4 +1,4 @@
-<%= nested_form_for @paper, :html => { :class => "form-horizontal paper" } do |f| %>
+<%= nested_form_for @paper, :html => { :class => "form-horizontal paper" } do |paper_form| %>
 
   <% if @paper.errors.any? %>
     <div id="error_expl" class="panel panel-danger">
@@ -16,45 +16,20 @@
   <% end %>
 
   <div class="form-group">
-    <%= f.label :name, :class => 'control-label col-lg-2' %>
-    <div class="col-lg-10">
-      <%= f.text_field :name, :class => 'form-control' %>
+    <%= paper_form.label :name, :class => 'control-label col-lg-1' %>
+    <div class="col-lg-11">
+      <%= paper_form.text_field :name, :class => 'form-control' %>
     </div>
-    <%=f.error_span(:name) %>
+    <%=paper_form.error_span(:name) %>
   </div>
   <div class="form-group">
-    <%= f.fields_for :questions, :html => { :class => "form-horizontal question" } do |question_form| %>
-      <div class="form-group">
-        <%= question_form.label :question, :class => 'control-label col-lg-2' %>
-        <div class="col-lg-11">
-          <%= question_form.text_field :question, :class => 'form-control' %>
-        </div>
-        <%= question_form.link_to_remove image_tag "x.png", size:"10x10"%>
-      </div>
-      <%= question_form.fields_for :options, :html => { :class => "form-horizontal option" } do |option_form| %>
-        <div class="form-group">
-        <%= option_form.label :option, :class => 'control-label col-lg-2' %>
-        <div class="col-lg-9">
-          <%= option_form.text_field :answer, :class => 'form-control' %>
-        </div>
-        <%= option_form.link_to_remove image_tag "x.png", size:"10x10"%>
-      </div>
-      <% end %>
-      <div class="col-lg-offset-2 col-lg-10">
-        <%= question_form.link_to_add "Add an Option", :options, :class => 'btn btn-primary'%>
-      </div>
-    <% end %>
-
-    <div class="form-group">
-      <div class="col-lg-offset-2 col-lg-10">
-        <%= f.link_to_add "Add a question", :questions, :class => 'btn btn-primary' %>
-      </div>
-    </div>
+    <%= paper_form.fields_for :questions, :html => { :class => "form-horizontal" }%>
   </div>
 
   <div class="form-group">
-    <div class="col-lg-offset-2 col-lg-10">
-      <%= f.submit nil, :class => 'btn btn-primary' %>
+    <div class="col-lg-12">
+      <%= paper_form.link_to_add "Add a question", :questions, :class => 'btn btn-primary' %>
+      <%= paper_form.submit nil, :class => 'btn btn-primary' %>
       <%= link_to t('.cancel', :default => t("helpers.links.cancel")),
                 papers_path, :class => 'btn btn-default' %>
     </div>
