--- a/app/views/papers/index.html.erb
+++ b/app/views/papers/index.html.erb
@@ -7,7 +7,7 @@
     <tr>
       <th><%= model_class.human_attribute_name(:name) %></th>
       <th><%= model_class.human_attribute_name(:number_of_questions) %></th>
-      <th><%= model_class.human_attribute_name(:total_time) %></th>
+      <th><%= model_class.human_attribute_name(:duation) %></th>
       <%if current_user.admin%>
         <th><%=t '.actions', :default => t("helpers.actions") %></th>
       <%end%>
@@ -18,7 +18,7 @@
       <tr>
         <td><%= link_to paper.name, paper_path(paper) %></td>
         <td><%= paper.questions.count() %></td>
-        <td><%= paper.questions.sum(:duration) %></td>
+        <td><%= format_time(paper.questions.sum(:duration))%></td>
         <td>
           <%if current_user.admin%>
             <%= link_to t('.edit', :default => t("helpers.links.edit")),
