--- a/app/views/answers/new.html.erb
+++ b/app/views/answers/new.html.erb
@@ -1,7 +1,10 @@
-<%=form_for @answer,url: paper_answers_path(@paper) do |f|%>
+<div class="pull-right">	
+	<h1 class='timer' data-seconds-left = <%= @answer.question.duration%> ></h1>
+</div>
+<%=form_for @answer,url: test_answers_path(@test), :method => :post do |f|%>
 	<%=f.hidden_field :question_id %>
 	<%=f.label @answer.question.question%>
-	<% @answer.question.options.each do |option| %>
+	<% @answer.question.options.shuffle.each do |option| %>
 	<br>
 		<% if @answer.question.qtype == "MAQ" %>
 			<%=check_box_tag "answer[option_ids][]",option.id%>
@@ -11,11 +14,5 @@
 		<%=f.label option.answer%>
 	<% end %>
 	<br>
-	<%#if answered?(@answer.question_id)%>
-		<%=f.submit :submit,class: "submit btn btn-primary"%>
-	<%#end%>
+	<%=f.submit :submit,class: "submit btn btn-primary"%>
 <%end%>
-<div> 
-	<!-- style="display:none;"> -->
-	<%=will_paginate @questions%>
-</div>
