--- a/app/views/admin/papers/_form.html.erb
+++ b/app/views/admin/papers/_form.html.erb
@@ -29,7 +29,7 @@
   <div class="form-group">
     <div class="col-lg-12">
       <%= paper_form.link_to_add "Add a question", :questions, :class => 'btn btn-primary' %>
-      <%= paper_form.submit nil, :class => 'btn btn-primary' %>
+      <%= paper_form.submit nil, :class => 'submit btn btn-primary' %>
       <%= link_to t('.cancel', :default => t("helpers.links.cancel")),
                 papers_path, :class => 'btn btn-default' %>
     </div>
