--- a/app/views/admin/papers/index.html.erb
+++ b/app/views/admin/papers/index.html.erb
@@ -16,14 +16,14 @@
   <tbody>
     <% @papers.each do |paper| %>
       <tr>
-        <td><%= link_to paper.name, paper_path(paper) %></td>
+        <td><%= link_to paper.name, admin_paper_path(paper) %></td>
         <td><%= paper.questions.count() %></td>
         <td><%= format_time(paper.questions.sum(:duration))%></td>
         <td>
-          <%if current_user.admin%>
+          <%if current_user.admin?%>
             <%= link_to t('.edit', :default => t("helpers.links.edit")),
-                        edit_paper_path(paper), :class => 'btn btn-default btn-xs' %>
-            <%= link_to t('.destroy', :default => t("helpers.links.destroy")),paper_path(paper),:method => :delete,:data => { :confirm => t('.confirm', :default => t("helpers.links.confirm", :default => 'Are you sure?')) },:class => 'btn btn-xs btn-danger' %>
+                        edit_admin_paper_path(paper), :class => 'btn btn-default btn-xs' %>
+            <%= link_to t('.destroy', :default => t("helpers.links.destroy")),admin_paper_path(paper),:method => :delete,:data => { :confirm => t('.confirm', :default => t("helpers.links.confirm", :default => 'Are you sure?')) },:class => 'btn btn-xs btn-danger' %>
           <%end%>
         </td>
       </tr>
@@ -31,5 +31,5 @@
   </tbody>
 </table>
 <%if current_user.admin%>
-  <%= link_to t('.new', :default => t("helpers.links.new")),new_paper_path,:class => 'btn btn-primary' %>
+  <%= link_to t('.new', :default => t("helpers.links.new")),new_admin_paper_path,:class => 'btn btn-primary' %>
 <%end%>
