--- a/app/views/admin/papers/_form.html.erb
+++ b/app/views/admin/papers/_form.html.erb
@@ -1,4 +1,4 @@
-<%= nested_form_for @paper, :html => { :class => "form-horizontal paper" } do |paper_form| %>
+<%= nested_form_for [:admin,@paper], :html => { :class => "form-horizontal paper" } do |paper_form| %>
 
   <% if @paper.errors.any? %>
     <div id="error_expl" class="panel panel-danger">
@@ -31,7 +31,7 @@
       <%= paper_form.link_to_add "Add a question", :questions, :class => 'btn btn-primary' %>
       <%= paper_form.submit nil, :class => 'submit btn btn-primary' %>
       <%= link_to t('.cancel', :default => t("helpers.links.cancel")),
-                papers_path, :class => 'btn btn-default' %>
+                admin_papers_path, :class => 'btn btn-default' %>
     </div>
   </div>
 
