--- a/app/views/admin/tests/_form.html.erb
+++ b/app/views/admin/tests/_form.html.erb
@@ -1,5 +1,4 @@
-<%= form_for @test, :html => { :class => "form-horizontal test" } do |f| %>
-
+<%= form_for [:admin,@test], :html => { :class => "form-horizontal test" } do |f| %>
   <% if @test.errors.any? %>
     <div id="error_expl" class="panel panel-danger">
       <div class="panel-heading">
@@ -41,7 +40,7 @@
     <div class="col-lg-offset-2 col-lg-10">
       <%= f.submit nil, :class => 'btn btn-primary' %>
       <%= link_to t('.cancel', :default => t("helpers.links.cancel")),
-                tests_path, :class => 'btn btn-default' %>
+                admin_user_paper_tests_path(@test.user,@test.paper), :class => 'btn btn-default' %>
     </div>
   </div>
 
