--- a/app/views/papers/results.html.erb
+++ b/app/views/papers/results.html.erb
@@ -1,6 +1,6 @@
 <%- model_class = Test -%>
 <div class="page-header">
-  <h1><%=@tests.first.paper.name%> Result</h1>
+  <h1><%="Paper Results"%></h1>
 </div>
 <table class="table table-striped">
   <thead>
@@ -15,7 +15,7 @@
       <tr>
         <td><%=index+1%></td>
         <td><%=test.marks%></td>
-        <td><%=link_to "Details", [:admin,test], :class => 'btn btn-default btn-xs'%></td>
+        <td><%=link_to "Details", test, :class => 'btn btn-default btn-xs'%></td>
       </tr>
     <% end %>
   </tbody>
