--- a/app/views/tests/index.html.erb
+++ b/app/views/tests/index.html.erb
@@ -1,42 +1,20 @@
 <%- model_class = Test -%>
 <div class="page-header">
-  <h1><%=t '.title', :default => model_class.model_name.human.pluralize.titleize %></h1>
+  <h1>Results</h1>
 </div>
 <table class="table table-striped">
   <thead>
     <tr>
-      <th><%= model_class.human_attribute_name(:id) %></th>
-      <th><%= model_class.human_attribute_name(:paper_id) %></th>
-      <th><%= model_class.human_attribute_name(:user_id) %></th>
-      <th><%= model_class.human_attribute_name(:marks) %></th>
-      <th><%= model_class.human_attribute_name(:created_at) %></th>
-      <th><%=t '.actions', :default => t("helpers.actions") %></th>
+      <th><%= model_class.human_attribute_name(:paper) %></th>
+      <th><%= model_class.human_attribute_name(:attempts) %></th>
     </tr>
   </thead>
   <tbody>
-    <% @tests.each do |test| %>
+    <% @tests.map{|test| test.paper }.uniq.each do |paper| %>
       <tr>
-        <td><%= link_to test.id, test_path(test) %></td>
-        <td><%= test.paper_id %></td>
-        <td><%= test.user_id %></td>
-        <td><%= test.marks %></td>
-        <td><%=l test.created_at %></td>
-        <td>
-          <%= link_to t('.show', :default => t("helpers.links.show")),
-                      test_path(test), :class => 'btn btn-default btn-xs' %>
-          <%= link_to t('.edit', :default => t("helpers.links.edit")),
-                      edit_test_path(test), :class => 'btn btn-default btn-xs' %>
-          <%= link_to t('.destroy', :default => t("helpers.links.destroy")),
-                      test_path(test),
-                      :method => :delete,
-                      :data => { :confirm => t('.confirm', :default => t("helpers.links.confirm", :default => 'Are you sure?')) },
-                      :class => 'btn btn-xs btn-danger' %>
-        </td>
+        <td><%= link_to paper.name, results_path(paper) %></td>
+        <td><%= paper.user_tests(current_user).count %></td>
       </tr>
     <% end %>
   </tbody>
 </table>
-
-<%= link_to t('.new', :default => t("helpers.links.new")),
-            papers_path,
-            :class => 'btn btn-primary' %>
