--- a/app/views/tests/show.html.erb
+++ b/app/views/tests/show.html.erb
@@ -4,20 +4,11 @@
 </div>
 
 <dl class="dl-horizontal">
-  <dt><strong><%= model_class.human_attribute_name(:paper_id) %>:</strong></dt>
-  <dd><%= @test.paper_id %></dd>
-  <dt><strong><%= model_class.human_attribute_name(:user_id) %>:</strong></dt>
-  <dd><%= @test.user_id %></dd>
+  <dt><strong><%= model_class.human_attribute_name(:paper) %>:</strong></dt>
+  <dd><%= @test.paper.name+" ("+@test.paper_id.to_s+")" %></dd>
+  <dt><strong><%= model_class.human_attribute_name(:user) %>:</strong></dt>
+  <dd><%= @test.user.fname+" "+@test.user.lname+" ("+@test.user_id.to_s+")" %></dd>
   <dt><strong><%= model_class.human_attribute_name(:marks) %>:</strong></dt>
   <dd><%= @test.marks %></dd>
 </dl>
-
-<%= link_to t('.back', :default => t("helpers.links.back")),
-              tests_path, :class => 'btn btn-default'  %>
-<%= link_to t('.edit', :default => t("helpers.links.edit")),
-              edit_test_path(@test), :class => 'btn btn-default' %>
-<%= link_to t('.destroy', :default => t("helpers.links.destroy")),
-              test_path(@test),
-              :method => 'delete',
-              :data => { :confirm => t('.confirm', :default => t("helpers.links.confirm", :default => 'Are you sure?')) },
-              :class => 'btn btn-danger' %>
+<%=link_to "Back", root_path, :class=> 'btn btn-default'%>
